# mcp-link

./: .dockerignore  .gitignore  .npmrc  .prettierrc.json  Dockerfile  LICENSE.md  README.md  README_ja.md  README_zh.md  eslint.config.mjs  knip.json  package.json  pnpm-lock.yaml  tsconfig.json
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: make.yml  typecheck.yml
apps/cli/: .npmignore  README.md  package.json  tsconfig.json
apps/cli/src/: mcp-aggregator.ts  mcpr.ts
apps/cli/src/commands/: connect.ts  serve.ts
apps/cli/tests/: serve-options.test.mjs
apps/desktop/: package.json
apps/desktop/src-tauri/: .gitignore  Cargo.toml  build.rs  mcp-link-updater.key.pub  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/icons/agents/: README.md
apps/desktop/src-tauri/src/: access_keys.rs  embed.rs  http.rs  lib.rs  main.rs  state.rs
apps/desktop/src-tauri/src/gateway/: config.rs  logs.rs  mod.rs  server.rs
apps/desktop/src-tauri/src/gateway/protocol/: anthropic.rs  mod.rs  openai.rs  sse.rs  stream.rs  stream_anthropic.rs  stream_openai.rs  stream_openai_events.rs  tests.rs  usage.rs
apps/desktop/src-tauri/src/hook/: runtime.rs
apps/desktop/src-tauri/src/mcp/: bundles.rs  client.rs  external_configs.rs  mod.rs  server.rs  server_tests.rs  servers.rs
apps/desktop/src-tauri/src/mcp/transport/: legacy_sse.rs  mod.rs
apps/desktop/src-tauri/src/platform/: dialogs.rs  entities.rs  hooks.rs  methods.rs  misc.rs  mod.rs  network.rs  registry.rs  skills.rs  workflows.rs
apps/desktop/src-tauri/src/platform/agents/: config_files.rs  export.rs  host.rs  index.rs  management.rs  mod.rs  model.rs  plugins.rs  plugins_tests.rs  util.rs  wasm.rs
apps/desktop/src-tauri/src/util/: json.rs  mod.rs  security.rs  time.rs
apps/desktop/src-tauri/src/workflow/: executor.rs  mod.rs  topology.rs
apps/desktop/src-tauri/windows/: installer-hooks.nsh
apps/web/: index.html  package.json  postcss.config.cjs  tailwind.config.cjs  tsconfig.json  vite.config.ts
apps/web/src/: main.tsx
apps/web/src/locales/: en.json  ja.json  zh.json
apps/web/src/renderer/components/: App.tsx  Home.tsx  Sidebar.tsx
apps/web/src/renderer/platform-api/: create-platform-api.ts  http-platform-api.ts  index.ts  platform-methods.ts  runtime-platform-api.ts  tauri-platform-api.ts
apps/web/src/renderer/services/: market-source-service.ts  registry-service.ts  skill-market-service.ts
docs/: AGENT_CONFIG_CAPABILITIES.md  AGENT_PLUGINS.md  DOCKER.md  GATEWAY.md  GATEWAY.zh-CN.md  NEW_FEATURE_CHECKLIST.md  SECURITY.md  SECURITY_LISTUP.md  TYPE_DEFINITION_GUIDELINES.md
docs/adr/: PLATFORM_API.md
docs/adr/database/: DATABASE_ARCHITECTURE.md  DATABASE_DESIGN_PATTERNS.md  DATABASE_SCHEMA_MANAGEMENT.md
docs/adr/hook/: MCP_HOOK_SYSTEM.md  mcp-hook-api-reference.md
docs/adr/skills/: SKILLS_DESIGN.md
docs/adr/tools/: KNIP_INTEGRATION.md
docs/architecture/: platform-and-agents.md
docs/design/: server-tool-permissions.md
plugins/agents-wasm/: Cargo.toml  README.md
plugins/agents-wasm/claude-code/: Cargo.toml
plugins/agents-wasm/claude-code/src/: lib.rs  management.rs
plugins/agents-wasm/codex/: Cargo.toml
plugins/agents-wasm/codex/src/: lib.rs  management.rs  providers.rs
plugins/agents-wasm/crush/: Cargo.toml
plugins/agents-wasm/crush/src/: lib.rs  management.rs
plugins/agents-wasm/gemini-cli/: Cargo.toml
plugins/agents-wasm/gemini-cli/src/: lib.rs  management.rs
plugins/agents-wasm/grok-cli/: Cargo.toml
plugins/agents-wasm/grok-cli/src/: lib.rs  management.rs
plugins/agents-wasm/kimi-code/: Cargo.toml
plugins/agents-wasm/kimi-code/src/: lib.rs  management.rs
plugins/agents-wasm/omp/: Cargo.toml
plugins/agents-wasm/omp/src/: lib.rs  management.rs
plugins/agents-wasm/opencode/: Cargo.toml
plugins/agents-wasm/opencode/src/: lib.rs  management.rs
plugins/agents-wasm/pi/: Cargo.toml
plugins/agents-wasm/pi/src/: lib.rs  management.rs
plugins/agents-wasm/qwen-code/: Cargo.toml
plugins/agents-wasm/qwen-code/src/: lib.rs  management.rs
plugins/agents-wasm/reasonix/: Cargo.toml
plugins/agents-wasm/reasonix/src/: lib.rs  management.rs
plugins/agents-wasm/sdk/: Cargo.toml
plugins/agents-wasm/sdk/src/: lib.rs
plugins/agents-wasm/zcode/: Cargo.toml
plugins/agents-wasm/zcode/src/: lib.rs  management.rs
plugins/agents/claude-code/: manifest.json  plugin.wasm
plugins/agents/codex/: manifest.json  plugin.wasm
plugins/agents/crush/: manifest.json  plugin.wasm
plugins/agents/gemini-cli/: manifest.json  plugin.wasm
plugins/agents/grok-cli/: manifest.json  plugin.wasm
plugins/agents/kimi-code/: manifest.json  plugin.wasm
plugins/agents/omp/: manifest.json  plugin.wasm
plugins/agents/opencode/: manifest.json  plugin.wasm
plugins/agents/pi/: manifest.json  plugin.wasm
plugins/agents/qwen-code/: manifest.json  plugin.wasm
plugins/agents/reasonix/: manifest.json  plugin.wasm
plugins/agents/zcode/: manifest.json  plugin.wasm
scripts/: package-agent-plugins.mjs
tools/: find-unused-i18n.mjs
tools/eslint-rules/: index.js  no-scattered-types.js  no-type-reexport.js
(+67 files in other folders)
