[package]
name = "mcp-link"
version = "1.0.0"
description = "MCP Link desktop shell"
edition = "2021"
default-run = "mcp-link-desktop"

[[bin]]
name = "mcp-link-desktop"
path = "src/main.rs"
required-features = ["desktop"]

[[bin]]
name = "mcp-link-server"
path = "src/bin/server.rs"
required-features = ["server"]

[lib]
name = "mcp_link"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["desktop"]
desktop = ["dep:tauri", "dep:tauri-plugin-autostart", "dep:tauri-plugin-dialog", "dep:tauri-plugin-opener", "dep:tauri-plugin-process", "dep:tauri-plugin-updater", "dep:tauri-build"]
server = ["dep:mime_guess", "dep:rust-embed"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [], optional = true }

[dependencies]
axum = "0.8"
boa_engine = "0.21.1"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "serde", "std"] }
futures = "0.3"
if-addrs = "0.13"
mime_guess = { version = "2", optional = true }
rmcp = { version = "2.1.0", default-features = false, features = ["client", "server", "transport-child-process", "transport-streamable-http-client-reqwest", "transport-streamable-http-server", "reqwest"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rust-embed = { version = "8", features = ["compression"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sse-stream = "0.2"
tauri = { version = "2.9.3", features = ["tray-icon"], optional = true }
tauri-plugin-autostart = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-opener = { version = "2", optional = true }
tokio = { version = "1", features = ["io-util", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
uuid = { version = "1.23.4", features = ["serde", "v4"] }
zip = { version = "4", default-features = false, features = ["deflate"] }
tauri-plugin-updater = { version = "2", optional = true }
tauri-plugin-process = { version = "2", optional = true }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.release.package."*"]
opt-level = "z"
